--- a/Webtech/cv/index.html
+++ b/Webtech/cv/index.html
@@ -26,6 +26,12 @@ gives a scope to enhance my knowledge and utilizing my skills towards the growth
   <li>Android Application</li>
   <li>Java</li>
   <li>C++</li>
+  <li>C#</li>
+  <li>SQL</li>
+  <li>Adobe XD</li>
+  
+  
+  
 </ul> 
 
 </body>
