--- a/Webtech/cv/index.html
+++ b/Webtech/cv/index.html
@@ -29,10 +29,42 @@ gives a scope to enhance my knowledge and utilizing my skills towards the growth
   <li>C#</li>
   <li>SQL</li>
   <li>Adobe XD</li>
-  
-  
-  
+  <li>Microsoft Office</li>
+   
 </ul> 
+
+<h1><b>Activites </b></h1>
+<hr>
+
+<ul style="list-style-type:disc;">
+  <li>Certified Andoid developer by BITM</li>
+  <li>SQL for data science by Coursera</li>
+  <li>java for andoid by coursera</li>
+   
+</ul> 
+
+<h1><b>Extra curriculum activites </b></h1>
+<hr>
+
+<ul style="list-style-type:disc;">
+  <li>Academic member,SPSB</li>
+  <li>General member,AIUB SHOMOY CLUB</li>
+  <li>Secertary, Help The Future(HTF)</li>
+   
+</ul> 
+
+<h1><b>Projects and Works </b></h1>
+<hr>
+
+<ol type="1">
+  <li>Neraby Doctor finding desktop application with both C# and JAVA.</li>
+  <li>Shop Management system for BR Motors BD using C#.</li>
+  <li>Basic android projects like (tic-tac-toe, weather report)</li>
+  <li>One-minute Health Care (Android app).</li>
+  <li>Soccerbot using Arduino and Bluetooth module (participated in IUT'sESONANCE).</li>
+  <li>Poster paper on Bangla sign language processing.</li>
+  
+</ol> 
 
 </body>
 </html>
