--- a/Webtech/cv/index.html
+++ b/Webtech/cv/index.html
@@ -42,7 +42,8 @@ gives a scope to enhance my knowledge and utilizing my skills towards the growth
   <li>java for andoid by coursera</li>
    
 </ul> 
-
+<br>
+<br>
 <h1><b>Extra curriculum activites </b></h1>
 <hr>
 
@@ -52,7 +53,8 @@ gives a scope to enhance my knowledge and utilizing my skills towards the growth
   <li>Secertary, Help The Future(HTF)</li>
    
 </ul> 
-
+<br>
+<br>
 <h1><b>Projects and Works </b></h1>
 <hr>
 
@@ -65,6 +67,52 @@ gives a scope to enhance my knowledge and utilizing my skills towards the growth
   <li>Poster paper on Bangla sign language processing.</li>
   
 </ol> 
+<br>
+<br>
+<h1>Academic Qualification</h1>
+<hr>
+
+<table style="width:100%">
+  <tr>
+    <th>Degree</th>
+    <th>Institute</th> 
+    <th>Result</th>
+	<th>year</th>
+	
+  </tr>
+  <tr>
+    <td>SSC</td>
+    <td>Dhaka Board</td>
+    <td>5.00</td>
+	<td>2014</td>
+	
+  </tr>
+  <tr>
+    <td>HSC</td>
+    <td>Dhaka Board</td>
+    <td>5.00</td>
+	<td>2016</td>
+	
+  </tr>
+  <tr>
+    <td>B.Sc.</td>
+    <td>AIUB</td>
+    <td>3.83</td>
+	<td>2021</td>
+	
+  </tr>
+</table>
+
+<br>
+<br>
+<h1><b>Experience </b></h1>
+<hr>
+
+<ol type="1">
+  <li>Programming coach, Narayangonj IDeal school(2018-19)</li>
+  <li>Andoid developer, The smart Lab(2019-present)</li>
+  
+</ol>
 
 </body>
 </html>
