--- a/Webtech/cv/index.html
+++ b/Webtech/cv/index.html
@@ -4,8 +4,12 @@
 <title>Curriculam vitea</title>
 </head>
 <body>
+<br>
+<br>
 
 <h2 align="center" >Plabon Kumar saha</h2>
+<p class="aligncenter">
+<img src="photo.jpg" alt="Trulli"  class="centerImage"  height="270" width="100"></p>
 <h3 align="center"><b>Location :</b> Narayangonj,Bangladesh</h3>
 <h3 align="center"><b>Phone no : </b> +8801686131757</h3>
 <h3 align="center"><b>Email : </b> pkumarsaha71@gmail.com</h3>
