--- a/Webtech/cv/index.html
+++ b/Webtech/cv/index.html
@@ -6,10 +6,13 @@
 <body>
 <br>
 <br>
-
+<div>
 <h2 align="center" >Plabon Kumar saha</h2>
 <p class="aligncenter">
-<img src="photo.jpg" alt="Trulli"  class="centerImage"  height="270" width="100"></p>
+<div style = "
+  margin-left: 45%">
+<img src="photo.jpg" alt="Trulli"  class="center"  height="270" width="150"></p>
+</div>
 <h3 align="center"><b>Location :</b> Narayangonj,Bangladesh</h3>
 <h3 align="center"><b>Phone no : </b> +8801686131757</h3>
 <h3 align="center"><b>Email : </b> pkumarsaha71@gmail.com</h3>
@@ -117,6 +120,7 @@ gives a scope to enhance my knowledge and utilizing my skills towards the growth
   <li>Andoid developer, The smart Lab(2019-present)</li>
   
 </ol>
+</div>
 
 </body>
 </html>
